# hugectr_backend

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  inference.DockerFile
cmake/: TritonHugeCTRBackendConfig.cmake.in
docs/: architecture.md  hierarchical_parameter_server.md  metrics.md  user_guide.md
hps_backend/: CMakeLists.txt  README.md
hps_backend/cmake/: TritonHPSBackendConfig.cmake.in
hps_backend/cmake/Modules/: ClangFormat.cmake
hps_backend/docs/: architecture.md  hierarchical_parameter_server.md
hps_backend/examples/: 00-HugeCTR_wdl_inference.ipynb  00-data_preprocessing.ipynb  01-data_preprocessing.ipynb  01_hps_data_prep_model_train.ipynb  02-hps_infer.ipynb  02-hps_wdl.ipynb  03-hps_torch.ipynb  04-hps_ensembe.ipynb  Hierarchical_Parameter_Server_Deployment.ipynb
hps_backend/examples/hps-triton-ensemble/: 02_model_inference.ipynb  README.md
hps_backend/examples/hps-triton-ensemble/.ipynb_checkpoints/: 01_model_training-checkpoint.ipynb
hps_backend/examples/hps_tf_ensemble/: 01_model_training.ipynb  02_model_inference.ipynb
hps_backend/include/: backend.hpp  hps_buffer.hpp  model_instance_state.hpp  model_state.hpp  thread_pool.hpp  timer.hpp  triton_common.hpp  triton_helpers.hpp
hps_backend/samples/: HPS_Pytorch_ensemble.ipynb  Hierarchical_Parameter_Server_Deployment.ipynb
hps_backend/samples/hps-triton-ensemble/: 01_model_training.ipynb  02_model_inference.ipynb  02_model_inference_hps_tf_ensemble.ipynb  03_model_inference_hps_trt_ensemble.ipynb  HPS_Pytorch_ensemble_deployment.ipynb  README.md  requirements.txt
hps_backend/src/: backend.cpp  hps.cc  model_instance_state.cpp  model_state.cpp  thread_pool.cpp  triton_helpers.cpp
include/: thread_pool.hpp  timer.hpp  triton_common.hpp  triton_helpers.hpp
samples/: Configuration_Management_Demo.ipynb  README.md  ps.json
samples/dcn/: README.md  config.pbtxt  dcn_client.py  dcn_data.json  dcn_train.json
samples/dcn/1/: dcn.json
samples/deepfm/: README.md  config.pbtxt  deepfm_client.py  deepfm_train.json
samples/deepfm/1/: deepfm.json
samples/dlrm/: HugeCTR_DLRM_Inference.ipynb  HugeCTR_DLRM_Training.ipynb  README.md
samples/hierarchical_deployment/: HugeCTR_Continuous_Training.ipynb  HugeCTR_Continuous_Training_and_Inference_Part1.ipynb  HugeCTR_Continuous_Training_and_Inference_Part2.ipynb  HugeCTR_Hierarchy_Deployment.ipynb  README.md
samples/hierarchical_deployment/hps_e2e_demo/: Continous_Training.ipynb  Continuous_Training.ipynb  Triton_Inference.ipynb  Triton_Update_Model.ipynb
samples/hierarchical_deployment/hps_e2e_demo/.ipynb_checkpoints/: Triton_Inference-checkpoint.ipynb  Triton_Update_Model-checkpoint.ipynb
samples/wdl/: HugeCTR_WDL_Inference.ipynb  HugeCTR_WDL_Inference_Triton.ipynb  HugeCTR_WDL_Training.ipynb
src/: embedding_interface.hpp  hugectr.cc  hugectrmodel.hpp  inference_utils.hpp  thread_pool.cpp  triton_helpers.cpp
src/inference/: hugectrmodel.hpp
test/: CI.DockerFile  hugectr_model_test1.py  hugectr_model_test2.py  test.sh  triton_server.sh
tools/: criteo2predict.py  preprocess.py
